# poppycuda

./: README.md
poppy/: CMakeLists.txt
poppy/Graphs/: Wiki-Vote.txt  students.txt  synthetic-1000-nodes.txt  synthetic-10000-nodes.txt  synthetic-5000-nodes.txt
poppy/dot/: Wiki-Vote-partition4.dot  email-Eu-core-partition4.dot  p2p-Gnutella04-partition4.dot  students-partition4.dot  synthetic-1000-partition4.dot  synthetic-10000-partition4.dot  synthetic-5000-partition4.dot
poppy/include/: calcul_PR.cuh  naive.cuh  poppy.cuh  poppy_m.cuh  poppy_uj.cuh
poppy/src/: clear.cu  main.cu  multi_DC_naive.cu  multi_DC_poppy_m.cu  multi_DC_poppy_uj.cu  naive.cu  poppy_m.cu  poppy_uj.cu
poppy/src/utils/: utils.cu  utils_crypto.cu  utils_export.cu  utils_graph.cu  utils_naive.cu  utils_poppy_m.cu  utils_poppy_uj.cu  utils_stats.cu
poppy/src/utils/include/: utils.cuh  utils_crypto.cuh  utils_export.cuh  utils_graph.cuh  utils_naive.cuh  utils_poppy_m.cuh  utils_poppy_uj.cuh  utils_stats.cuh
poppy/test/: calcul_orbits.cu  cuthill_mckee.cu  expes.cu  graph_partitionner.cu  op_compar.cu  rcm.cu  test.cu
